--- a/EventStore.Functions/EventStore.Functions.csproj
+++ b/EventStore.Functions/EventStore.Functions.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
+    <!--Start function app-->
+    <StartAction>Program</StartAction>
+    <StartProgram>$(APPDATA)\npm\node_modules\azure-functions-core-tools\bin\func.exe</StartProgram>
+    <StartArguments>start</StartArguments>
   </PropertyGroup>
 
   <ItemGroup>
